--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -62,7 +62,7 @@
 
 
 
-    
+
 </section>
 <!--------------------SOBRE NOSOTROS INICIO----------------------->
 
@@ -83,6 +83,6 @@
 <!--------------------SOBRE NOSOTROS FIN----------------------->
 
 
-<script src="script.js"></script>
+<script src="./JS/script.js"></script>
 </body>
 </html>
