cambios principales 2da parte

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display&display=swap" rel="stylesheet">
     <title>Guía para celiacos</title>
 </head>
 <body>
@@ -64,14 +66,14 @@
     <div class="cont">
         <div class="row">
             <div class="section-title">
-                <h2>Sobre nosotros</h2>
+                <h2 id="about">Sobre nosotros</h2>
             </div>
         </div>
 
             <div class="row">
 
                 <div class="about-text">
-                    <h3>Bienvenidos a (nombre de local)</h3>
+                    <h3>Bienvenidos a GreenFood</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eius corporis error voluptas quo porro iure neque ea cumque ratione in reprehenderit excepturi corrupti incidunt placeat sed rerum, animi distinctio..Lorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor nulla perspiciatis recusandae accusamus dolorum iure maxime totam tenetur tempora a excepturi enim, temporibus harum quo. Ipsum molestias iusto quaerat possimus!</p>
                     <a href="#our-menu" class="btn btn-default">Nuestro menú</a>
                 </div>
