--- a/index.html
+++ b/index.html
@@ -338,22 +338,12 @@
 
 
             </div>
-
-
-
-
-
-
-
         </div>
         </div>
-
-
-
-
     </section>
-
-
+    <footer class="footer mt-auto py-3 bg-dark">
+        <span class="text-muted  ms-5 ">Programa desde tu casa. Proyecto final 2021</span>        
+    </footer>
 
     <!--------------------MENU FIN-------------------->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
