--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home"></i> Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Sobre Nosotros</a>
+                        <a class="nav-link active" href="#"><i class="fas fa-users"></i> Sobre Nosotros</a>
                     </li>
                     <li class="nav-item dropdown ">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -56,10 +56,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  active" href="#" tabindex="-1" aria-disabled="true">Tiendas</a>
+                        <a class="nav-link  active" href="tiendas.html" tabindex="-1" aria-disabled="true"><i class="fas fa-store-alt"></i> Tiendas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
+                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-store-alt"></i> Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -68,40 +68,6 @@
 
 
 
-
-
-
-    <!--HEADER COMIENZO-->
-    <!-- <header class="header">
-        <div class="container">
-            <div class="row justify-content-between align-items-center">
-                <div class="logo">
-                    <a href="#"><img
-                            src="./img/502-5027862_green-food-productos-ecologicos-veganos-para-celiacos-green.png"
-                            alt=""></a> -->
-    <!--poner logo-->
-    <!-- </div>
-                <button type="button" class="nav-toggler">
-                    <span></span>
-                </button>
-                <nav class="nav">
-                    <ul>
-
-                        <li class="nav-item"><a href="#home">Inicio</a></li>
-                        <li class="nav-item"><a href="#about">Sobre nosotros</a></li>
-                        <li class="nav-item"><a href="#our-menu">Comidas</a></li>
-                        <li class="nav-item"><a href="#testimonials">Testimonios</a></li>
-                        <li class="nav-item"><a href="#contact">Contacto</a></li>
-
-
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header> -->
-    <!--HEADER FIN-->
-
-    <!--------------------INICIO----------------------->
 
     <!--------------------INICIO----------------------->
     <section class="home-section" id="home">
