Modificando css en tienda e inicio

--- a/tiendas.html
+++ b/tiendas.html
@@ -64,7 +64,7 @@
                         <a class="nav-link  active" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-store-alt"></i> Tiendas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"> <i class="fas fa-store-alt"></i> Contacto</a>
+                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"> <i class="fab fa-contao"></i> Contacto</a>
                     </li>
                 </ul>
             </div>
