--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a class="nav-link  active" href="tiendas.html" tabindex="-1" aria-disabled="true"><i class="fas fa-store-alt"></i> Tiendas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-store-alt"></i> Contacto</a>
+                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"><i class="fab fa-contao"></i> Contacto</a>
                     </li>
                 </ul>
             </div>
