--- a/tiendas.html
+++ b/tiendas.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+   
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./CSS/styles.css"> -->
-    <link rel="stylesheet" href="./CSS/tiendas.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -25,7 +25,16 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./img/logo/52db179069959544738ba98e972df99b.svg " type="image/x-icon">
     <title>Tiendas</title>
+   
+    <script src="./JS/dieteticasCoordenadas.js"></script>
+    <!--Google Maps-->
+   
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFkCAn3tczfyEToaDzxT4VHjGf27SGlto&callback=initMap"></script>
 
+    <script src="./JS/mapa.js"></script>
+     <!--CSS propio-->
+     <link rel="stylesheet" href="./CSS/tiendas.css">
 
 
 
@@ -61,10 +70,12 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  active" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-store-alt"></i> Tiendas</a>
+                        <a class="nav-link  active" href="#" tabindex="-1" aria-disabled="true"><i
+                                class="fas fa-store-alt"></i> Tiendas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"> <i class="fab fa-contao"></i> Contacto</a>
+                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"> <i
+                                class="fab fa-contao"></i> Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -72,82 +83,69 @@
     </nav>
 
     <!-- ------------------Cuerpo--------------------- -->
-    <div class="container ">
-        <div class="row">
-            <div class="col mapa">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d52551.888187140816!2d-58.480094575404244!3d-34.59169282368877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sdieteticas%20en%20CABA%20y%20gran%20Buenos%20aires!5e0!3m2!1ses-419!2sar!4v1626206868936!5m2!1ses-419!2sar"
-                    width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    
+    <div id="map" ></div>
+
+
+
+
+
+    <div class="container px-4 py-5" id="featured-3">
+        <h2 class="pb-2 border-bottom tiendasListas">Dietéticas</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dietética Rojas</h2>
+                <p>Dirección: Rojas 12, CABA. <br>
+                   Teléfono: +54 11-4902-9975      
+                </p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+
+                </a>
             </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Gran Dietética</h2>
+                <p>Dirección: Curapaligüe 770, C1406 DAU, Buenos Aires. <br>
+                    Teléfono: +54 9 11-6954-1126</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
 
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Almacen Natural</h2>
+                <p>Dirección: Francisco N. de Laprida 417, B1832 Buenos Aires, Provincia de Buenos Aires.<br>
+                    Teléfono: +54 11-3044-8947</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
 
-
-
-            <div class="container px-4 py-5" id="featured-3">
-                <h2 class="pb-2 border-bottom">Tiendas</h2>
-                <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-                    <div class="feature col">
-                        <i class="fas fa-store"></i>
-                        <h2>Dietética Tomi</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
-                        <a href="#" class="icon-link">
-                            Visitar
-
-                        </a>
-                    </div>
-                    <div class="feature col">
-                        <i class="fas fa-store"></i>
-                        <h2>Dietetica Buenos Aires</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
-                        <a href="#" class="icon-link">
-                            Visitar
-
-                        </a>
-                    </div>
-                    <div class="feature col">
-                        <i class="fas fa-store"></i>
-                        <h2>Featured title</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
-                        <a href="#" class="icon-link">
-                            Visitar
-
-                        </a>
-                    </div>
-                    <div class="feature col">
-                        <i class="fas fa-store"></i>
-                        <h2>Dietética once</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
-                        <a href="#" class="icon-link">
-                            Visitar
-                        </a>
-                    </div>
-                    <div class="feature col">
-                        <i class="fas fa-store"></i>
-                        <h2>Dietética Uriburu</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
-                        <a href="#" class="icon-link">
-                            Visitar
-
-                        </a>
-                    </div>
-                    <div class="feature col">
-                        <i class="fas fa-store"></i>
-                        <h2>Featured title</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
-                        <a href="#" class="icon-link">
-                            Visitar
-                        </a>
-                    </div>
-                </div>
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dietética Viamonte</h2>
+                <p>Dirección: Viamonte 859, C1053 CABA. <br>
+                    Teléfono: +54 11-4322-9380 </p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dietética la gran manzana</h2>
+                <p>Dirección: Av. Vélez Sarsfield 453, Villa Madero, Provincia de Buenos Aires<br>
+                Teléfono: +54 11-7003-9016</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+                </a>
             </div>
         </div>
-    </div> 
+    </div>
+    </div>
+    </div>
 
 
 
@@ -160,13 +158,17 @@
     </footer>
 
     <!--------------------MENU FIN-------------------->
+    <!--Boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-    <script src="./JS/script.js"></script>
+
+
+
 
 </body>
 
