Realice la seccion tiendas

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid ">
-            <a class="navbar-brand ms-5" href="#"> Navbar</a>
+            <a class="navbar-brand ms-5" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -39,14 +39,11 @@
             <div class="collapse navbar-collapse me-5 " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end " style="width:100%">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home"></i> Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i>
+                            Inicio</a>
                     </li>
                     <li class="nav-item">
-<<<<<<< HEAD
                         <a class="nav-link active" href="#"><i class="fas fa-users"></i> Sobre Nosotros</a>
-=======
-                        <a class="nav-link active" href="#">Sobre Nosotros</a>
->>>>>>> 778632e50dce39716d5ed1ebfaadd48675f947f3
                     </li>
                     <li class="nav-item dropdown ">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -60,17 +57,12 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-<<<<<<< HEAD
-                        <a class="nav-link  active" href="tiendas.html" tabindex="-1" aria-disabled="true"><i class="fas fa-store-alt"></i> Tiendas</a>
+                        <a class="nav-link  active" href="./tiendas.html" tabindex="-1" aria-disabled="true"><i
+                                class="fas fa-store-alt"></i> Tiendas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"><i class="fab fa-contao"></i> Contacto</a>
-=======
-                        <a class="nav-link  active" href="#" tabindex="-1" aria-disabled="true">Tiendas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
->>>>>>> 778632e50dce39716d5ed1ebfaadd48675f947f3
+                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"> <i
+                                class="fab fa-contao"></i> Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -80,15 +72,12 @@
 
 
 
-<<<<<<< HEAD
-=======
 
 
    
 
     
 
->>>>>>> 778632e50dce39716d5ed1ebfaadd48675f947f3
     <!--------------------INICIO----------------------->
     <section class="home-section" id="home">
         <div class="home-bg">
@@ -139,13 +128,8 @@
                             alt="">
                     </div>
                 </div>
-<<<<<<< HEAD
 
 
-=======
-
-
->>>>>>> 778632e50dce39716d5ed1ebfaadd48675f947f3
             </div>
 
         </div>
@@ -270,12 +254,6 @@
 
             </div>
 
-<<<<<<< HEAD
-
-
-
-=======
->>>>>>> 778632e50dce39716d5ed1ebfaadd48675f947f3
 
 
 
@@ -284,10 +262,6 @@
 
         </div>
         </div>
-<<<<<<< HEAD
-        </div>
-=======
->>>>>>> 778632e50dce39716d5ed1ebfaadd48675f947f3
         <!-- -------------------------------------------CENA----------------------------- -->
         <div class="container">
 
