Modifique la Lat y Long de las dietitcas en el mapa

--- a/tiendas.html
+++ b/tiendas.html
@@ -25,13 +25,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./img/logo/52db179069959544738ba98e972df99b.svg " type="image/x-icon">
     <title>Tiendas</title>
-   
+    <!--js de las coordenadas de las dieteticas-->
     <script src="./JS/dieteticasCoordenadas.js"></script>
     <!--Google Maps-->
    
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFkCAn3tczfyEToaDzxT4VHjGf27SGlto&callback=initMap"></script>
-
+         <!--js con el codigo personal del mapa-->
     <script src="./JS/mapa.js"></script>
      <!--CSS propio-->
      <link rel="stylesheet" href="./CSS/tiendas.css">
