agregando navegacion interna del navbar comidas

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                             Comidas
                         </a>
                         <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item " href="#">Desayuno</a></li>
-                            <li><a class="dropdown-item" href="#">Almuerzo</a></li>
-                            <li><a class="dropdown-item" href="#">Cena</a></li>
+                            <li><a class="dropdown-item " href="#desayuno">Desayuno</a></li>
+                            <li><a class="dropdown-item" href="#almuerzo">Almuerzo</a></li>
+                            <li><a class="dropdown-item" href="#cena">Cena</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -149,7 +149,7 @@
             </div>
             <div class="row">
                 <div class="section-title2">
-                    <h2 id="about">&mdash; Desayuno &mdash; </h2>
+                    <h2 id="desayuno">&mdash; Desayuno &mdash; </h2>
                 </div>
             </div>
             <div class="row">
@@ -208,7 +208,7 @@
         </div>
         <div class="row">
             <div class="section-title2">
-                <h2 id="about">&mdash; Almuerzo &mdash; </h2>
+                <h2 id="almuerzo">&mdash; Almuerzo &mdash; </h2>
             </div>
         </div>
         <div class="row">
@@ -268,7 +268,7 @@
         </div>
         <div class="row">
             <div class="section-title2">
-                <h2 id="about">&mdash; Cena &mdash; </h2>
+                <h2 id="cena">&mdash; Cena &mdash; </h2>
             </div>
         </div>
         <div class="row">
