--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><i class="fas fa-users"></i> Sobre Nosotros</a>
+                        <a class="nav-link active" href="#sobreNosotros"><i class="fas fa-users"></i> Sobre Nosotros</a>
                     </li>
                     <li class="nav-item dropdown ">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -104,7 +104,7 @@
         <div class="cont">
             <div class="row">
                 <div class="section-title">
-                    <h2 id="about"> Sobre nosotros </h2>
+                    <h2 id="sobreNosotros"> Sobre nosotros </h2>
                 </div>
             </div>
 
