guarde lo hecho en main

--- a/tiendas.html
+++ b/tiendas.html
@@ -25,10 +25,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./img/logo/52db179069959544738ba98e972df99b.svg " type="image/x-icon">
     <title>Tiendas</title>
+
     <!--js de las coordenadas de las dieteticas-->
     <script src="./JS/dieteticasCoordenadas.js"></script>
-    <!--Google Maps-->
-   
+    <!--Google Maps-->   
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFkCAn3tczfyEToaDzxT4VHjGf27SGlto&callback=initMap"></script>
          <!--js con el codigo personal del mapa-->
@@ -87,11 +87,9 @@
     <div id="map" ></div>
 
 
-
-
-
     <div class="container px-4 py-5" id="featured-3">
         <h2 class="pb-2 border-bottom tiendasListas">Dietéticas</h2>
+        <h2 class="pb-2 border-bottom tiendasListas">CABA</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col tiendaNombre" >
                 <i class="fas fa-store"></i>
@@ -116,9 +114,9 @@
             </div>
             <div class="feature col tiendaNombre" >
                 <i class="fas fa-store"></i>
-                <h2>Almacen Natural</h2>
-                <p>Dirección: Francisco N. de Laprida 417, B1832 Buenos Aires, Provincia de Buenos Aires.<br>
-                    Teléfono: +54 11-3044-8947</p>
+                <h2>La Floresta</h2>
+                <p>Dirección: Av. Rivadavia 8357, CABA <br>
+                    Teléfono: 011 4672-1979 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
                     Ver en mapa
 
@@ -135,14 +133,196 @@
             </div>
             <div class="feature col tiendaNombre" >
                 <i class="fas fa-store"></i>
-                <h2>Dietética la gran manzana</h2>
-                <p>Dirección: Av. Vélez Sarsfield 453, Villa Madero, Provincia de Buenos Aires<br>
-                Teléfono: +54 11-7003-9016</p>
+                <h2>Dieteticas Tomy</h2>
+                <p>Dirección: Av. Rivadavia 7390,CABA<br>
+                Teléfono:</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
                     Ver en mapa
                 </a>
             </div>
         </div>
+<!--Comienzo de zona Norte-->
+        <h2 class="pb-2 border-bottom tiendasListas">Zona Norte</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dieteticas Tomi</h2>
+                <p>Dirección: Av. Maipú 201, Vicente López <br>
+                   Teléfono: 011 4719-7600      
+                </p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dietetica Señor Sol</h2>
+                <p>Dirección: Av. Maipú 3239, Vicente López. <br>
+                    Teléfono: 011 4799-5548</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Nutralgica</h2>
+                <p>Dirección: Corrientes 681, Olivos.<br>
+                    Teléfono: 011 4711-3909</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>La Nueva dietética</h2>
+                <p>Dirección: Av. de Mayo 893, zona norte<br>
+                    Teléfono: 011 4711-3909</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Sanas Delícias</h2>
+                <p>Dirección: Av. Centenario 416, San Isidro.<br>
+                Teléfono: 011 4732-0916</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dietética Arenales</h2>
+                <p>Dirección: Arenales 2040, Martínez.<br>
+                Teléfono: 011 4798-2087</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+                </a>
+            </div>
+            
+        </div><!--fIN zona norte-->
+
+<!--Comienzo de zona oeste-->
+        <h2 class="pb-2 border-bottom tiendasListas">Zona Oeste</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dietética Nomadas</h2>
+                <p>Dirección: Marcos de Bueno 530, Moreno.<br>
+                   Teléfono: Sin información.       
+                </p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dietética Pepita y Sesamo</h2>
+                <p>Dirección: Claudio María Joly 2888, Moreno.<br>
+                    Teléfono: 011 4144-9016</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Buen día, día</h2>
+                <p>Dirección: Av. Gdor. Vergara 4088, Hurlingham.<br>
+                    Teléfono: 011 3765-8244</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dietética La Aldea</h2>
+                <p>Dirección: Av. Gdor. Vergara 3223, Hurlingham. <br>
+                    Teléfono: 011 7395-5997</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dietética La Mezcla</h2>
+                <p>Dirección: Av. Pres. Dr. Arturo Umberto Illia 2494, San Justo.<br>
+                Teléfono: 011 4441-2185</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Fuerza Natural Dietética</h2>
+                <p>Dirección: República de Portugal 2450, Isidro Casanova<br>
+                Teléfono: Sin información </p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+                </a>
+            </div>
+        </div>
+<!--Comienzo de zona Sur-->
+
+        
+        <h2 class="pb-2 border-bottom tiendasListas">Zona Sur</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Dietética Lola</h2>
+                <p>Dirección: Av. Eva Perón 4430, Florencio Varela.<br>
+                   Teléfono: 011 5976-9922
+                </p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Alimnat</h2>
+                <p>Dirección: Fabián Onsari 1481, Wilde<br>
+                    Teléfono: 011 3874-4352</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2>Almacén Conciente</h2>
+                <p>Dirección: Av. Conquista del desierto 127, Ezeiza.<br>
+                    Teléfono: Sin información</p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2></h2>
+                <p>Dirección:  <br>
+                    Teléfono:  </p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+                </a>
+            </div>
+            <div class="feature col tiendaNombre" >
+                <i class="fas fa-store"></i>
+                <h2></h2>
+                <p><br>
+                Teléfono: </p>
+                <a href="#" id="tiendaNombre" class="icon-link">
+                    Ver en mapa
+                </a>
+            </div>
+        </div>
+
     </div>
     </div>
     </div>
