--- a/tiendas.html
+++ b/tiendas.html
@@ -96,14 +96,14 @@
 
 
     <div class="container px-4 py-5" id="featured-3">
-        <h2 class="pb-2 border-bottom tiendasListas">Dietéticas</h2>
+        <h2 class="pb-2 tiendasListas text-center">Dietéticas</h2>
         <h2 class="pb-2 border-bottom tiendasListas" id="caba">CABA</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col tiendaNombre">
                 <i class="fas fa-store"></i>
                 <h5>Dietética Rojas</h5>
                 <p>Dirección: Rojas 12, CABA. <br>
-                    Teléfono: +54 11-4902-9975
+                    Teléfono: 011 4902-9975
                 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
                     Ver en mapa
@@ -114,7 +114,7 @@
                 <i class="fas fa-store"></i>
                 <h5>Gran Dietética</h5>
                 <p>Dirección: Curapaligüe 770, C1406 DAU, Buenos Aires. <br>
-                    Teléfono: +54 9 11-6954-1126</p>
+                    Teléfono: 011 6954-1126</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
                     Ver en mapa
 
@@ -134,7 +134,7 @@
                 <i class="fas fa-store"></i>
                 <h5>Dietética Viamonte</h5>
                 <p>Dirección: Viamonte 859, C1053 CABA. <br>
-                    Teléfono: +54 11-4322-9380 </p>
+                    Teléfono: 011 4322-9380 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
                     Ver en mapa
                 </a>
@@ -143,7 +143,7 @@
                 <i class="fas fa-store"></i>
                 <h5>Dieteticas Tomy</h5>
                 <p>Dirección: Av. Rivadavia 7390,CABA<br>
-                    Teléfono:</p>
+                    Teléfono: Sin información</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
                     Ver en mapa
                 </a>
@@ -155,7 +155,7 @@
             <div class="feature col tiendaNombre">
                 <i class="fas fa-store"></i>
                 <h5>Dieteticas Tomi</h5>
-                <p>Dirección: Av. Maipú 201, Vicente López <br>
+                <p>Dirección: Av. Maipú 201, Vicente López. <br>
                     Teléfono: 011 4719-7600
                 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
@@ -186,7 +186,7 @@
             <div class="feature col tiendaNombre">
                 <i class="fas fa-store"></i>
                 <h5>La Nueva dietética</h5>
-                <p>Dirección: Av. de Mayo 893, zona norte<br>
+                <p>Dirección: Av. de Mayo 893, zona norte. <br>
                     Teléfono: 011 4711-3909</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
                     Ver en mapa
