Segui haciendo modificaciones en el html de tiendas y el js de coordenadas

--- a/tiendas.html
+++ b/tiendas.html
@@ -113,7 +113,7 @@
             <div class="feature col tiendaNombre">
                 <i class="fas fa-store"></i>
                 <h5>Gran Dietética</h5>
-                <p>Dirección: Curapaligüe 770, C1406 DAU, Buenos Aires. <br>
+                <p>Dirección: Curapaligüe 770, CABA. <br>
                     Teléfono: 011 6954-1126</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
                     Ver en mapa
@@ -123,7 +123,7 @@
             <div class="feature col tiendaNombre">
                 <i class="fas fa-store"></i>
                 <h5>La Floresta</h5>
-                <p>Dirección: Av. Rivadavia 8357, CABA <br>
+                <p>Dirección: Av. Rivadavia 8357, CABA. <br>
                     Teléfono: 011 4672-1979 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
                     Ver en mapa
