--- a/tiendas.html
+++ b/tiendas.html
@@ -100,52 +100,49 @@
         <h2 class="pb-2 border-bottom tiendasListas" id="caba">CABA</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
                 <h5>Dietética Rojas</h5>
-                <p>Dirección: Rojas 12, CABA. <br>
-                    Teléfono: 011 4902-9975
+                <p>🏪 Dirección: Rojas 12, CABA. <br>
+                    ☎️ Teléfono: 011 4902-9975
                 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
                 <h5>Gran Dietética</h5>
-                <p>Dirección: Curapaligüe 770, CABA. <br>
-                    Teléfono: 011 6954-1126</p>
+                <p>🏪 Dirección: Curapaligüe 770, CABA. <br>
+                    ☎️ Teléfono: 011 6954-1126</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
                 <h5>La Floresta</h5>
-                <p>Dirección: Av. Rivadavia 8357, CABA. <br>
-                    Teléfono: 011 4672-1979 </p>
+                <p>🏪 Dirección: Av. Rivadavia 8357, CABA. <br>
+                    ☎️ Teléfono: 011 4672-1979 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dietética Viamonte</h5>
-                <p>Dirección: Viamonte 859, C1053 CABA. <br>
-                    Teléfono: 011 4322-9380 </p>
+                <p>🏪 Dirección: Viamonte 859, C1053 CABA. <br>
+                    ☎️ Teléfono: 011 4322-9380 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dieteticas Tomy</h5>
-                <p>Dirección: Av. Rivadavia 7390,CABA<br>
-                    Teléfono: Sin información</p>
+                <p>🏪 Dirección: Av. Rivadavia 7390,CABA<br>
+                    ☎️ Teléfono: Sin información</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
                 </a>
             </div>
         </div>
@@ -153,61 +150,61 @@
         <h2 class="pb-2 border-bottom tiendasListas" id="norte">Zona Norte</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dieteticas Tomi</h5>
-                <p>Dirección: Av. Maipú 201, Vicente López. <br>
-                    Teléfono: 011 4719-7600
+                <p>🏪 Dirección: Av. Maipú 201, Vicente López. <br>
+                    ☎️ Teléfono: 011 4719-7600
                 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dietetica Señor Sol</h5>
-                <p>Dirección: Av. Maipú 3239, Vicente López. <br>
-                    Teléfono: 011 4799-5548</p>
+                <p>🏪 Dirección: Av. Maipú 3239, Vicente López. <br>
+                    ☎️ Teléfono: 011 4799-5548</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Nutralgica</h5>
-                <p>Dirección: Corrientes 681, Olivos.<br>
-                    Teléfono: 011 4711-3909</p>
+                <p>🏪 Dirección: Corrientes 681, Olivos.<br>
+                    ☎️ Teléfono: 011 4711-3909</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>La Nueva dietética</h5>
-                <p>Dirección: Av. de Mayo 893, zona norte. <br>
-                    Teléfono: 011 4711-3909</p>
+                <p>🏪 Dirección: Av. de Mayo 893, zona norte. <br>
+                    ☎️ Teléfono: 011 4711-3909</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Sanas Delícias</h5>
-                <p>Dirección: Av. Centenario 416, San Isidro.<br>
-                    Teléfono: 011 4732-0916</p>
+                <p>🏪 Dirección: Av. Centenario 416, San Isidro.<br>
+                    ☎️ Teléfono: 011 4732-0916</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dietética Arenales</h5>
-                <p>Dirección: Arenales 2040, Martínez.<br>
-                    Teléfono: 011 4798-2087</p>
+                <p>🏪 Dirección: Arenales 2040, Martínez.<br>
+                    ☎️ Teléfono: 011 4798-2087</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
                 </a>
             </div>
 
@@ -218,59 +215,59 @@
         <h2 class="pb-2 border-bottom tiendasListas" id="oeste">Zona Oeste</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dietética Nomadas</h5>
-                <p>Dirección: Marcos de Bueno 530, Moreno.<br>
-                    Teléfono: Sin información.
+                <p>🏪 Dirección: Marcos de Bueno 530, Moreno.<br>
+                    ☎️ Teléfono: Sin información.
                 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dietética Pepita y Sesamo</h5>
-                <p>Dirección: Claudio María Joly 2888, Moreno.<br>
-                    Teléfono: 011 4144-9016</p>
+                <p>🏪 Dirección: Claudio María Joly 2888, Moreno.<br>
+                    ☎️ Teléfono: 011 4144-9016</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Buen día, día</h5>
-                <p>Dirección: Av. Gdor. Vergara 4088, Hurlingham.<br>
-                    Teléfono: 011 3765-8244</p>
+                <p>🏪 Dirección: Av. Gdor. Vergara 4088, Hurlingham.<br>
+                    ☎️ Teléfono: 011 3765-8244</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dietética La Aldea</h5>
-                <p>Dirección: Av. Gdor. Vergara 3223, Hurlingham. <br>
-                    Teléfono: 011 7395-5997</p>
+                <p>🏪 Dirección: Av. Gdor. Vergara 3223, Hurlingham. <br>
+                    ☎️ Teléfono: 011 7395-5997</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dietética La Mezcla</h5>
-                <p>Dirección: Av. Pres. Dr. Arturo Umberto Illia 2494, San Justo.<br>
-                    Teléfono: 011 4441-2185</p>
+                <p>🏪 Dirección: Av. Pres. Dr. Arturo Umberto Illia 2494, San Justo.<br>
+                    ☎️ Teléfono: 011 4441-2185</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Fuerza Natural Dietética</h5>
-                <p>Dirección: República de Portugal 2450, Isidro Casanova<br>
-                    Teléfono: Sin información </p>
+                <p>🏪 Dirección: República de Portugal 2450, Isidro Casanova<br>
+                    ☎️ Teléfono: Sin información </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
                     Ver en mapa
                 </a>
@@ -282,61 +279,61 @@
         <h2 class="pb-2 border-bottom tiendasListas" id="sur">Zona Sur</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dietética Lola</h5>
-                <p>Dirección: Av. Eva Perón 4430, Florencio Varela.<br>
-                    Teléfono: 011 5976-9922
+                <p>🏪 Dirección: Av. Eva Perón 4430, Florencio Varela.<br>
+                    ☎️ Teléfono: 011 5976-9922
                 </p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Alimnat</h5>
-                <p>Dirección: Fabián Onsari 1481, Wilde.<br>
-                    Teléfono: 011 3874-4352</p>
+                <p>🏪 Dirección: Fabián Onsari 1481, Wilde.<br>
+                    ☎️ Teléfono: 011 3874-4352</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Almacén Conciente</h5>
-                <p>Dirección: Av. Conquista del desierto 127, Ezeiza.<br>
-                    Teléfono: Sin información</p>
+                <p>🏪 Dirección: Av. Conquista del desierto 127, Ezeiza.<br>
+                    ☎️ Teléfono: Sin información</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
 
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>La Naturaleza Dietética & Herborista</h5>
-                <p>Dirección: Av. 14 3161, Berazategui.<br>
-                    Teléfono: 011 4226-8833</p>
+                <p>🏪 Dirección: Av. 14 3161, Berazategui.<br>
+                    ☎️ Teléfono: 011 4226-8833</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Dietética El Ceibo</h5>
-                <p>Dirección: Av. Mitre 984, Quilmes.<br>
-                    Teléfono: 011 4224-8469</p>
+                <p>🏪 Dirección: Av. Mitre 984, Quilmes.<br>
+                    ☎️ Teléfono: 011 4224-8469</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
-                <i class="fas fa-store"></i>
+
                 <h5>Manyula</h5>
-                <p>Dirección: 9 de julio 141, Bernal.<br>
-                    Teléfono: 011 7038-3762</p>
+                <p>🏪 Dirección: 9 de julio 141, Bernal.<br>
+                    ☎️ Teléfono: 011 7038-3762</p>
                 <a href="#" id="tiendaNombre" class="icon-link">
-                    Ver en mapa
+                    🔎 Ver en mapa
                 </a>
             </div>
 
