modificando medidas en index

--- a/index.html
+++ b/index.html
@@ -103,13 +103,27 @@
     <section class="about-section sec-padding" id="about">
         <div class="cont">
             <div class="row">
-                <div class="section-title">
-                    <h2 id="sobreNosotros"> Sobre nosotros </h2>
+                <div class="col-12">
+                    <div class="section-title">
+                        <h2 id="sobreNosotros"> Sobre nosotros </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="about-img">
+                        <div class="img-box ">
+                            <h3>Cuidándolos desde 1999</h3>
+                            <img class="img-home"
+                                src="https://www.65ymas.com/uploads/s1/11/56/94/bigstock-gluten-free-diet-concept-sel-291861787.jpeg"
+                                alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="row">
-
+            <div class="row ">
+                <div class="col-12">
                 <div class="about-text">
                     <h3>Bienvenidos a GreenFood</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eius corporis error voluptas
@@ -119,18 +133,12 @@
                         enim, temporibus harum quo. Ipsum molestias iusto quaerat possimus!</p>
                     <a href="#our-menu" class="btn btn-default">Nuestro menú</a>
                 </div>
-
-                <div class="about-img">
-                    <div class="img-box">
-                        <h3>Cuidándolos desde 1999</h3>
-                        <img class="img-home"
-                            src="https://www.65ymas.com/uploads/s1/11/56/94/bigstock-gluten-free-diet-concept-sel-291861787.jpeg"
-                            alt="">
-                    </div>
-                </div>
-
-
             </div>
+        </div>
+
+
+
+        </div>
 
         </div>
     </section>
@@ -154,20 +162,20 @@
             </div>
             <div class="row">
 
-                <div class="card">
+                <div class="col-10 col-xl-4 card">
 
                     <div class="card-header">
                         <h4>Alfajores de maicena sin TACC</h4>
                         <img src="https://scm-assets.constant.co/scm/unilever/2bb5223be0548fcc55c230aa5f951219/ce65930b-bc22-4bf3-9aa8-1e6b2708f982.png"
                             alt="">
                     </div>
-                    <div class="card-body">
+                    <div class="card-body ">
 
                         <a href="" class="btn">Más...</a>
                     </div>
 
                 </div>
-                <div class="card">
+                <div class="col-10 col-xl-4 card">
 
                     <div class="card-header">
                         <h4>Brownies sin TACC ni azúcar agregada</h4>
@@ -180,7 +188,7 @@
                     </div>
 
                 </div>
-                <div class="card">
+                <div class="col-10 col-xl-4 card">
 
                     <div class="card-header">
                         <h4>Torta de chocolate sin TACC</h4>
@@ -213,9 +221,9 @@
             </div>
             <div class="row">
 
-                <div class="card">
+                <div class="col-10 col-l-4 col-xl-4 card">
 
-                    <div class="card-header">
+                    <div class="card-header ">
                         <h4>Tapas de empanadas sin TACC</h4>
                         <img src="https://www.mendozapost.com/files/image/291/291238/602285eba59ff.jpg" alt="">
                     </div>
@@ -225,7 +233,7 @@
                     </div>
 
                 </div>
-                <div class="card">
+                <div class="col-10 col-l-4 col-xl-4 card">
 
                     <div class="card-header">
                         <h4>Nombre comida</h4>
@@ -238,7 +246,7 @@
                     </div>
 
                 </div>
-                <div class="card">
+                <div class="col-10 col-l-4 col-xl-4 card">
 
                     <div class="card-header">
                         <h4>Nombre comida</h4>
@@ -249,16 +257,7 @@
 
                         <a href="" class="btn">Más...</a>
                     </div>
-
-
                 </div>
-
-
-
-
-
-
-
             </div>
         </div>
         </div>
@@ -273,7 +272,7 @@
             </div>
             <div class="row">
 
-                <div class="card">
+                <div class="col-10 col-l-4 col-xl-4 card">
 
                     <div class="card-header">
                         <h4>Pan de molde</h4>
@@ -286,7 +285,7 @@
                     </div>
 
                 </div>
-                <div class="card">
+                <div class="col-10 col-l-4 col-xl-4 card">
 
                     <div class="card-header">
                         <h4>Tortas fritas sin TACC</h4>
@@ -298,7 +297,7 @@
                     </div>
 
                 </div>
-                <div class="card">
+                <div class="col-10 col-l-4 col-xl-4 card">
 
                     <div class="card-header">
                         <h4>Nombre comida</h4>
