modificando medidas en index

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     </section>
     <!--------------------SOBRE NOSOTROS INICIO----------------------->
 
-    <section class="about-section sec-padding" id="about">
-        <div class="cont">
+    <div class="about-section sec-padding" id="about">
+       
             <div class="row">
                 <div class="col-12">
                     <div class="section-title">
@@ -138,10 +138,10 @@
 
 
 
-        </div>
+       
 
         </div>
-    </section>
+    </div>
 
     <!--------------------SOBRE NOSOTROS FIN----------------------->
     <!-------------------MENU INICIO----------------------->
