--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
 
             <div class="row ">
                 <div class="col-12">
-                <div class="about-text">
+                <div class="about-text mt-5">
                     <h3>Bienvenidos a GreenFood</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eius corporis error voluptas
                         quo porro iure neque ea cumque ratione in reprehenderit excepturi corrupti incidunt placeat sed
                         rerum, animi distinctio..Lorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
                         nulla perspiciatis recusandae accusamus dolorum iure maxime totam tenetur tempora a excepturi
                         enim, temporibus harum quo. Ipsum molestias iusto quaerat possimus!</p>
-                    <a href="#our-menu" class="btn btn-default">Nuestro menú</a>
+                    <a href="#our-menu" class="btn mt-5 btn-default">Nuestro menú</a>
                 </div>
             </div>
         </div>
