arreglando  problemas en el btn-menu del index

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         rerum, animi distinctio..Lorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
                         nulla perspiciatis recusandae accusamus dolorum iure maxime totam tenetur tempora a excepturi
                         enim, temporibus harum quo. Ipsum molestias iusto quaerat possimus!</p>
-                    <a href="#our-menu" class="btn mt-5 btn-default">Nuestro menú</a>
+                    <a href="#our-menu" class="btn mt-5 btn-default btn-menu">Nuestro menú</a>
                 </div>
             </div>
         </div>
