--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
             <div class="row">
 
-                <div class="col-10 col-l-4 col-xl-3 card">
+                <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header">
                         <h4>Alfajores de maicena sin TACC</h4>
@@ -175,7 +175,7 @@
                     </div>
 
                 </div>
-                <div class="col-10 col-l-4 col-xl-3 card">
+                <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header">
                         <h4>Brownies sin TACC ni azúcar agregada</h4>
@@ -188,7 +188,7 @@
                     </div>
 
                 </div>
-                <div class="col-10 col-l-4 col-xl-3 card">
+                <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header">
                         <h4>Torta de chocolate sin TACC</h4>
