--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </div>
             <div class="row">
 
-                <div class="col-10 col-l-4 col-xl-3 card">
+                <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header ">
                         <h4>Tapas de empanadas sin TACC</h4>
@@ -233,7 +233,7 @@
                     </div>
 
                 </div>
-                <div class="col-10 col-l-4 col-xl-3 card">
+                <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header">
                         <h4>Nombre comida</h4>
@@ -246,7 +246,7 @@
                     </div>
 
                 </div>
-                <div class="col-10 col-l-4 col-xl-3 card">
+                <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header">
                         <h4>Nombre comida</h4>
@@ -272,7 +272,7 @@
             </div>
             <div class="row">
 
-                <div class="col-10 col-l-4 col-xl-3 card">
+                <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header">
                         <h4>Pan de molde</h4>
@@ -285,7 +285,7 @@
                     </div>
 
                 </div>
-                <div class="col-10 col-l-4 col-xl-3 card">
+                <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header">
                         <h4>Tortas fritas sin TACC</h4>
@@ -297,7 +297,7 @@
                     </div>
 
                 </div>
-                <div class="col-10 col-l-4 col-xl-3 card">
+                <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header">
                         <h4>Nombre comida</h4>
