--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
         <div class="home-bg">
         </div>
         <div class="container">
+            <nav class="login-inicio">
+                <a href="login.html">log in</a>
+                <a href="signp.html">registro →</a>
+            </nav>
             <div class="row min-vh-100 align-items-center">
+
                 <div class="home-text">
                     <h1> GreenFood Organic </h1>
                     <p class="h1-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto officia cum suscipit
