agregando las recetas al proyecto

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                             Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#sobreNosotros"><i class="fas fa-users"></i> Sobre Nosotros</a>
+                        <a class="nav-link active" href="#"><i class="fas fa-users"></i> Sobre Nosotros</a>
                     </li>
                     <li class="nav-item dropdown ">
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link active dropdown-toggle" href="recetas.html" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-bread-slice"></i>
                             Comidas
                         </a>
@@ -56,9 +56,17 @@
                             <li><a class="dropdown-item" href="#cena">Cena</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link  active" href="./tiendas.html" tabindex="-1" aria-disabled="true"><i
-                                class="fas fa-store-alt"></i> Tiendas</a>
+                    <li class="nav-item dropdown ">
+                        <a class="nav-link active dropdown-toggle" href="tiendas.html" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-store-alt"></i>
+                            Tiendas
+                        </a>
+                        <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item " href="#caba">CABA</a></li>
+                            <li><a class="dropdown-item" href="#norte">Zona Norte</a></li>
+                            <li><a class="dropdown-item" href="#oeste">Zona Oeste</a></li>
+                            <li><a class="dropdown-item" href="#sur">Zona Sur</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"> <i
