--- a/tiendas.html
+++ b/tiendas.html
@@ -52,7 +52,7 @@
                         <a class="nav-link active" href="#"><i class="fas fa-users"></i> Sobre Nosotros</a>
                     </li>
                     <li class="nav-item dropdown ">
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link active dropdown-toggle" href="./recetas.html" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-bread-slice"></i>
                             Comidas
                         </a>
