agregando las recetas al proyecto

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         <a class="nav-link active" href="#"><i class="fas fa-users"></i> Sobre Nosotros</a>
                     </li>
                     <li class="nav-item dropdown ">
-                        <a class="nav-link active dropdown-toggle" href="recetas.html" id="navbarDropdown" role="button"
+                        <a class="nav-link active dropdown-toggle"  id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-bread-slice"></i>
-                            Comidas
+                            Recetas
                         </a>
                         <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item " href="#desayuno">Desayuno</a></li>
@@ -56,17 +56,9 @@
                             <li><a class="dropdown-item" href="#cena">Cena</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown ">
-                        <a class="nav-link active dropdown-toggle" href="tiendas.html" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-store-alt"></i>
-                            Tiendas
-                        </a>
-                        <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item " href="#caba">CABA</a></li>
-                            <li><a class="dropdown-item" href="#norte">Zona Norte</a></li>
-                            <li><a class="dropdown-item" href="#oeste">Zona Oeste</a></li>
-                            <li><a class="dropdown-item" href="#sur">Zona Sur</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="tiendas.html"><i class="fas fa-store-alt"></i>
+                            Tiendas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"> <i
@@ -184,7 +176,7 @@
                     </div>
                     <div class="card-body ">
 
-                        <a href="" class="btn">Más...</a>
+                        <a href="desayuno.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -197,7 +189,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="" class="btn">Más...</a>
+                        <a href="desayuno.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -210,7 +202,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="" class="btn">Más...</a>
+                        <a href="desayuno.html" class="btn">Más...</a>
                     </div>
 
 
@@ -242,7 +234,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="" class="btn">Más...</a>
+                        <a href="almuerzo.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -255,7 +247,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="" class="btn">Más...</a>
+                        <a href="almuerzo.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -268,7 +260,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="" class="btn">Más...</a>
+                        <a href="almuerzo.html" class="btn">Más...</a>
                     </div>
                 </div>
             </div>
@@ -294,7 +286,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="" class="btn">Más...</a>
+                        <a href="cena.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -306,7 +298,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="" class="btn">Más...</a>
+                        <a href="cena.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -319,7 +311,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="" class="btn">Más...</a>
+                        <a href="cena.html" class="btn">Más...</a>
                     </div>
 
 
