--- a/tiendas.html
+++ b/tiendas.html
@@ -52,15 +52,20 @@
                         <a class="nav-link active" href="#"><i class="fas fa-users"></i> Sobre Nosotros</a>
                     </li>
                     <li class="nav-item dropdown ">
-                        <a class="nav-link active dropdown-toggle" href="./recetas.html" id="navbarDropdown" role="button"
+                        <a class="nav-link active dropdown-toggle"  id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-bread-slice"></i>
-                            Comidas
+                            Recetas
                         </a>
                         <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item " href="#">Desayuno</a></li>
-                            <li><a class="dropdown-item" href="#">Almuerzo</a></li>
-                            <li><a class="dropdown-item" href="#">Cena</a></li>
+                            <li><a class="dropdown-item " href="desayuno.html">Desayuno</a></li>
+                            <li><a class="dropdown-item" href="almuerzo.html">Almuerzo</a></li>
+                            <li><a class="dropdown-item" href="cena.html">Cena</a></li>
                         </ul>
+                    </li>
+                       
+
+
+                       
                     </li>
                     <li class="nav-item dropdown ">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
